manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: springapp
spec:
  type: LoadBalancer
  selector:
    app: springapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
